@@ -8,6 +8,9 @@ Version 7.0
 
 (upcoming release with new features, release date to be decided)
 
+- The user is now presented with the available choices if prompt=True and
+  type=click.Choice in a click.option. The choices are listed within
+  parentthesis like 'Choose fruit (apple, orange): '.
 - The exception objects now store unicode properly.
 - Added the ability to hide commands and options from help.
 - Added Float Range in Types.
